# bad-repo

./: .gitignore  Makefile  README.md  debug_genai.py  pyproject.toml
firmware/esp32_cam/: esp32_cam.ino
src/: main.py
src/agents/: video_analysis.py
src/agents/business_intelligence/: graph.py  nodes.py
src/agents/researcher/: graph.py  nodes.py  pinecone_store.py
src/api/: app.py  dependencies.py  interfaces.py
src/api/controllers/: __init__.py  admin_controller.py  chat_controller.py  health_controller.py
src/api/schemas/: chat_schemas.py
src/api/services/: agent_service.py  chat_service.py  vector_service.py
src/api/static/: broadcaster.html  index.html  viewer.html
src/core/: config.py  models.py  state.py  vector_factory.py  vector_store.py
src/services/: action_service.py  stream_service.py
src/supervisor/: __init__.py  graph.py  nodes.py
src/tools/: search.py
src/workflows/: streaming_graph.py
